# mulearn

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  MANIFEST.in  README.md  environment.yml  environment_rtd.yml  ieee-paper-results.ipynb  lagrange-mulearn.ipynb  main.py  mulearn-compare.py  mulearn-documentation.ipynb  mulearn-unsupervised.ipynb  project.toml  pyproject.toml  requirements.in  requirements.txt  settings.ini  setup.py  update-version.sh
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst  requirements_rtd.txt
experimental/: lagrange-mulearn-doc.ipynb
mulearn/: __init__.py  benchmark_testing.ipynb  cooper_test.ipynb  distributions.py  fknn.py  fuzzifier.py  kernel.py  log_explorer.ipynb  optimization.py  testing.ipynb
src/mulearn/: __init__.py  distributions.py  fuzzifier.py
test/: test_optimization.py
tests/: test_fuzzifier.py  test_fuzzy_inductor.py  test_kernel.py  test_optimization.py
v0.1.8/: 00_kernel.ipynb  01_fuzzifiers.ipynb  02_optimization.ipynb  03_mulearn.ipynb  Makefile  index.ipynb  settings.ini
v0.1.8/docs/: _config.yml  core.html  fuzzifiers.html  index.html  kernel.html  learn-1D-fuzzy-learn.html  mulearn.html  optimisation.html  optimization.html  sidebar.json
v0.1.8/docs/_data/: topnav.yml
v0.1.8/docs/_data/sidebars/: home_sidebar.yml
v0.1.8/mulearn/: None.py  __init__.py  _nbdev.py  fuzzifier.py  kernel.py  optimisation.py  optimization.py
